<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectionsActivity">

    <Button
        android:id="@+id/getNextDirection"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="290dp"
        android:layout_marginEnd="33dp"
        android:focusable="true"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <TextView
        android:id="@+id/currentDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="491dp"
        android:text=""
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/getNextDirection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/back"
        android:layout_width="86dp"
        android:layout_height="54dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="2dp"
        android:text="Go Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/skip"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginTop="634dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="49dp"
        android:text="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/getNextDirection"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Detailed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/getNextDirection"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <Button
        android:id="@+id/step_back"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="557dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="49dp"
        android:text="Step Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/skip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/lat"
        android:layout_width="99dp"
        android:layout_height="39dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="511dp"
        android:ems="10"
        android:hint="lat"
        android:inputType="numberSigned|number|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/setting"
        app:layout_constraintEnd_toStartOf="@+id/lng"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lng"
        android:layout_width="96dp"
        android:layout_height="38dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="561dp"
        android:ems="10"
        android:hint="lng"
        android:inputType="numberSigned|number|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/getNextDirection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lat"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/set"
        android:layout_width="70dp"
        android:layout_height="54dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="505dp"
        android:text="Set"
        app:layout_constraintBottom_toTopOf="@+id/setting"
        app:layout_constraintEnd_toStartOf="@+id/lat"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>