...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayPlanActivity">

    <ListView
        android:id="@+id/planlist"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/direction"
        android:layout_width="121dp"
        android:layout_height="41dp"
        android:layout_marginStart="302dp"
        android:layout_marginTop="657dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="27dp"
...
